--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
 DISCORD_TOKEN=your_discord_bot_token_here
 MISTRAL_API_KEY=your_mistral_api_key_here
 MISTRAL_MODEL_NAME=mistral-large-2512
+BRAVE_API_KEY=your_brave_api_key_here
