--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,6 @@
 DISCORD_TOKEN=your_discord_bot_token_here
 MISTRAL_API_KEY=your_mistral_api_key_here
-MISTRAL_MODEL_NAME=mistral-large-2512
+MISTRAL_MODEL_NAME=mistral-large-latest
 BRAVE_API_KEY=your_brave_api_key_here
+DATA_DIR=./data
+MISTRAL_MAX_MESSAGES_IN_HISTORY=10
